format code and fix comments

--- a/src/lib/homestore/tests/CMakeLists.txt
+++ b/src/lib/homestore/tests/CMakeLists.txt
@@ -19,3 +19,8 @@ target_link_libraries(test_shard_manager
   )
 add_test(NAME ShardManagerTest COMMAND ${CMAKE_BINARY_DIR}/bin/test_shard_manager)
 
+add_executable (test_heap_chunk_selector)
+target_sources(test_heap_chunk_selector PRIVATE test_heap_chunk_selector.cpp ../heap_chunk_selector.cpp)
+target_link_libraries(test_heap_chunk_selector ${COMMON_TEST_DEPS})
+add_test(NAME HeapChunkSelectorTest COMMAND ${CMAKE_BINARY_DIR}/bin/test_heap_chunk_selector)
+
