--- a/src/lib/memory_backend/CMakeLists.txt
+++ b/src/lib/memory_backend/CMakeLists.txt
@@ -2,14 +2,15 @@ cmake_minimum_required (VERSION 3.11)
 
 add_library ("${PROJECT_NAME}_memory")
 target_sources("${PROJECT_NAME}_memory" PRIVATE
-		homeobject.cpp
-		blob_manager.cpp
-		shard_manager.cpp
-        $<TARGET_OBJECTS:${PROJECT_NAME}_core>
-	)
+    mem_homeobject.cpp
+		mem_blob_manager.cpp
+		mem_shard_manager.cpp
+    mem_pg_manager.cpp
+    $<TARGET_OBJECTS:${PROJECT_NAME}_core>
+)
 target_link_libraries("${PROJECT_NAME}_memory"
             ${COMMON_DEPS}
-        )
+)
 
 if(BUILD_TESTING)
 add_executable (pg_memory_test)
