--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -16,5 +16,5 @@ if(BUILD_TESTING)
 add_subdirectory(tests)
 endif()
 
-add_subdirectory(homestore)
-add_subdirectory(memory)
+add_subdirectory(homestore_backend)
+add_subdirectory(memory_backend)
