--- a/src/lib/homestore_backend/CMakeLists.txt
+++ b/src/lib/homestore_backend/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required (VERSION 3.11)
 
-
 add_library ("${PROJECT_NAME}_homestore")
 target_sources("${PROJECT_NAME}_homestore" PRIVATE
-        homeobject.cpp
-        blob_manager.cpp
-        shard_manager.cpp
-        heap_chunk_selector.cpp
-        replication_state_machine.cpp
+		hs_homeobject.cpp
+		hs_blob_manager.cpp
+		hs_shard_manager.cpp
+		hs_pg_manager.cpp
+		heap_chunk_selector.cpp
+		replication_state_machine.cpp
         $<TARGET_OBJECTS:${PROJECT_NAME}_core>
 	)
 target_link_libraries("${PROJECT_NAME}_homestore"
@@ -15,5 +15,5 @@ target_link_libraries("${PROJECT_NAME}_homestore"
         )
 
 if(BUILD_TESTING)
-  add_subdirectory(tests)
+	add_subdirectory(tests)
 endif()
