--- a/src/lib/homestore_backend/tests/CMakeLists.txt
+++ b/src/lib/homestore_backend/tests/CMakeLists.txt
@@ -14,13 +14,13 @@ set_property(TEST HomeObject PROPERTY RUN_SERIAL 1)
 add_executable (test_shard_manager)
 target_sources(test_shard_manager PRIVATE test_shard_manager.cpp)
 target_link_libraries(test_shard_manager
-    homeobject_homestore
-    ${COMMON_TEST_DEPS}
-  )
+            homeobject_homestore
+            ${COMMON_TEST_DEPS}
+)
 add_test(NAME ShardManagerTest COMMAND ${CMAKE_BINARY_DIR}/bin/test_shard_manager)
 
 add_executable (test_heap_chunk_selector)
 target_sources(test_heap_chunk_selector PRIVATE test_heap_chunk_selector.cpp ../heap_chunk_selector.cpp)
-target_link_libraries(test_heap_chunk_selector ${COMMON_TEST_DEPS})
+target_link_libraries(test_heap_chunk_selector homeobject_homestore ${COMMON_TEST_DEPS})
 add_test(NAME HeapChunkSelectorTest COMMAND ${CMAKE_BINARY_DIR}/bin/test_heap_chunk_selector)
 
