--- a/src/lib/homestore/CMakeLists.txt
+++ b/src/lib/homestore/CMakeLists.txt
@@ -4,6 +4,7 @@ cmake_minimum_required (VERSION 3.11)
 add_library ("${PROJECT_NAME}_homestore")
 target_sources("${PROJECT_NAME}_homestore" PRIVATE
         homeobject.cpp
+        pg_manager.cpp
         blob_manager.cpp
         shard_manager.cpp
         heap_chunk_selector.cpp
