--- a/src/lib/memory/CMakeLists.txt
+++ b/src/lib/memory/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources("${PROJECT_NAME}_memory" PRIVATE
 		homeobject.cpp
 		blob_manager.cpp
 		shard_manager.cpp
+		pg_manager.cpp
         $<TARGET_OBJECTS:${PROJECT_NAME}_core>
 	)
 target_link_libraries("${PROJECT_NAME}_memory"
