--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,9 +17,12 @@ endif()
 if (NOT DEFINED CMAKE_BUILD_TYPE)
     set (CMAKE_BUILD_TYPE "Debug")
 endif()
-if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
-    include (cmake/debug_flags.cmake)
-endif()
+if (DEFINED BUILD_COVERAGE)
+  if (${BUILD_COVERAGE})
+    include (cmake/CodeCoverage.cmake)
+    APPEND_COVERAGE_COMPILER_FLAGS()
+  endif ()
+endif ()
 
 if (NOT DEFINED MEMORY_SANITIZER_ON)
     set(MEMORY_SANITIZER_ON OFF)
