--- a/src/lib/homestore_backend/tests/CMakeLists.txt
+++ b/src/lib/homestore_backend/tests/CMakeLists.txt
@@ -2,22 +2,23 @@ cmake_minimum_required(VERSION 3.13)
 
 include_directories (BEFORE .)
 
-add_executable(test_home_object)
-target_sources(test_home_object PRIVATE test_home_object.cpp)
-target_link_libraries(test_home_object
+add_executable(test_hs_homeobject)
+target_sources(test_hs_homeobject PRIVATE test_hs_homeobject.cpp)
+target_link_libraries(test_hs_homeobject
             homeobject_homestore
             ${COMMON_TEST_DEPS}
         )
-add_test(NAME HomeObject COMMAND ${CMAKE_BINARY_DIR}/bin/test_home_object)
-set_property(TEST HomeObject PROPERTY RUN_SERIAL 1)
+add_test(NAME HSHomeObject COMMAND ${CMAKE_BINARY_DIR}/bin/test_hs_homeobject)
+set_property(TEST HSHomeObject PROPERTY RUN_SERIAL 1)
 
-add_executable (test_shard_manager)
-target_sources(test_shard_manager PRIVATE test_shard_manager.cpp)
-target_link_libraries(test_shard_manager
+add_executable (hs_shard_tests)
+target_sources(hs_shard_tests PRIVATE hs_shard_tests.cpp)
+target_link_libraries(hs_shard_tests
             homeobject_homestore
             ${COMMON_TEST_DEPS}
 )
-add_test(NAME ShardManagerTest COMMAND ${CMAKE_BINARY_DIR}/bin/test_shard_manager)
+add_test(NAME HSShardTests COMMAND ${CMAKE_BINARY_DIR}/bin/hs_shard_tests)
+set_property(TEST HSShardTests PROPERTY RUN_SERIAL 1)
 
 add_executable (test_heap_chunk_selector)
 target_sources(test_heap_chunk_selector PRIVATE test_heap_chunk_selector.cpp ../heap_chunk_selector.cpp)
