Fix chunk_selector test

--- a/src/lib/homestore_backend/tests/CMakeLists.txt
+++ b/src/lib/homestore_backend/tests/CMakeLists.txt
@@ -3,14 +3,9 @@ cmake_minimum_required(VERSION 3.13)
 include_directories (BEFORE .)
 
 list(APPEND TEST_SOURCES
-    test_heap_chunk_selector.cpp
     hs_shard_tests.cpp
-    )
-if (NOT ${CMAKE_SYSTEM_PROCESSOR} STREQUAL "aarch64")
-list(APPEND TEST_SOURCES
     hs_blob_tests.cpp
     )
-endif()
 
 add_library(homestore_tests OBJECT)
 target_sources(homestore_tests PRIVATE ${TEST_SOURCES})
@@ -18,3 +13,8 @@ target_link_libraries(homestore_tests
             homeobject_homestore
             ${COMMON_TEST_DEPS}
         )
+
+add_executable (test_heap_chunk_selector)
+target_sources(test_heap_chunk_selector PRIVATE test_heap_chunk_selector.cpp ../heap_chunk_selector.cpp)
+target_link_libraries(test_heap_chunk_selector homeobject_homestore ${COMMON_TEST_DEPS})
+add_test(NAME HeapChunkSelectorTest COMMAND ${CMAKE_BINARY_DIR}/bin/test_heap_chunk_selector)
