Remove more references to old code.

--- a/.codecov.yml
+++ b/.codecov.yml
@@ -4,6 +4,4 @@ codecov:
 
 ignore:
   - "**/*_generated.h"
-  - "src/mocks/**"
-  - "src/lib/homestore_backend/tests/**"
-  - "src/lib/tests/**"
+  - "**/tests/**"
