--- a/src/lib/homestore_backend/CMakeLists.txt
+++ b/src/lib/homestore_backend/CMakeLists.txt
@@ -13,6 +13,7 @@ target_sources("${PROJECT_NAME}_homestore" PRIVATE
     index_kv.cpp
     heap_chunk_selector.cpp
     replication_state_machine.cpp
+    hs_hmobj_cp.cpp
     $<TARGET_OBJECTS:${PROJECT_NAME}_core>
 )
 target_link_libraries("${PROJECT_NAME}_homestore"
