--- a/.github/workflows/build_commit.yml
+++ b/.github/workflows/build_commit.yml
@@ -20,22 +20,10 @@ on:
         type: string
 
 jobs:
-  SislDeps:
-    uses: eBay/sisl/.github/workflows/build_dependencies.yml@master
+  Sisl10Deps:
+    uses: eBay/sisl/.github/workflows/build_dependencies.yml@stable/v10.x
     with:
-      branch: master
-      platform: ${{ inputs.platform }}
-      build-type: ${{ inputs.build-type }}
-      malloc-impl: ${{ inputs.malloc-impl }}
-      prerelease: ${{ inputs.prerelease }}
-      tooling: None
-    if: ${{ github.event_name != 'pull_request' }}
-
-  NuRaftMesgDeps:
-    needs: SislDeps
-    uses: eBay/nuraft_mesg/.github/workflows/build_dependencies.yml@main
-    with:
-      branch: main
+      branch: stable/v10.x
       platform: ${{ inputs.platform }}
       build-type: ${{ inputs.build-type }}
       malloc-impl: ${{ inputs.malloc-impl }}
@@ -44,7 +32,7 @@ jobs:
     if: ${{ github.event_name != 'pull_request' }}
 
   IOMgrDeps:
-    needs: SislDeps
+    needs: Sisl10Deps
     uses: eBay/iomanager/.github/workflows/build_dependencies.yml@master
     with:
       branch: master
@@ -56,7 +44,7 @@ jobs:
     if: ${{ github.event_name != 'pull_request' }}
 
   HomeStoreDeps:
-    needs: [IOMgrDeps, NuRaftMesgDeps]
+    needs: [IOMgrDeps]
     uses: eBay/homestore/.github/workflows/build_dependencies.yml@master
     with:
       branch: master
