--- a/.github/workflows/build_commit.yml
+++ b/.github/workflows/build_commit.yml
@@ -31,8 +31,19 @@ jobs:
       tooling: None
     if: ${{ github.event_name != 'pull_request' }}
 
+  Sisl11Deps:
+    uses: eBay/sisl/.github/workflows/build_dependencies.yml@master
+    with:
+      branch: master
+      platform: ${{ inputs.platform }}
+      build-type: ${{ inputs.build-type }}
+      malloc-impl: ${{ inputs.malloc-impl }}
+      prerelease: ${{ inputs.prerelease }}
+      tooling: None
+    if: ${{ github.event_name != 'pull_request' }}
+
   IOMgrDeps:
-    needs: Sisl10Deps
+    needs: [Sisl10Deps, Sisl11Deps]
     uses: eBay/iomanager/.github/workflows/build_dependencies.yml@master
     with:
       branch: master
