--- a/.github/workflows/build_commit.yml
+++ b/.github/workflows/build_commit.yml
@@ -42,6 +42,18 @@ jobs:
       tooling: None
     if: ${{ github.event_name != 'pull_request' }}
 
+  NuraftMesgDeps:
+    needs: SislDeps
+    uses: eBay/nuraft_mesg/.github/workflows/build_dependencies.yml@main
+    with:
+      branch: main
+      platform: ${{ inputs.platform }}
+      build-type: ${{ inputs.build-type }}
+      malloc-impl: ${{ inputs.malloc-impl }}
+      prerelease: ${{ inputs.prerelease }}
+      tooling: None
+    if: ${{ github.event_name != 'pull_request' }}
+
   IOMgrDeps:
     needs: [Sisl10Deps, Sisl11Deps]
     uses: eBay/iomanager/.github/workflows/build_dependencies.yml@master
@@ -55,7 +67,7 @@ jobs:
     if: ${{ github.event_name != 'pull_request' }}
 
   HomeStoreDeps:
-    needs: [IOMgrDeps]
+    needs: [IOMgrDeps, NuraftMesgDeps]
     uses: eBay/homestore/.github/workflows/build_dependencies.yml@master
     with:
       branch: master
