remove sisl 10 dep in github workflow

--- a/.github/workflows/build_commit.yml
+++ b/.github/workflows/build_commit.yml
@@ -55,7 +55,7 @@ jobs:
     if: ${{ github.event_name != 'pull_request' }}
 
   IOMgrDeps:
-    needs: [Sisl10Deps, Sisl11Deps]
+    needs: [Sisl11Deps]
     uses: eBay/iomanager/.github/workflows/build_dependencies.yml@master
     with:
       branch: master
