--- a/.github/workflows/build_dependencies.yml
+++ b/.github/workflows/build_dependencies.yml
@@ -232,10 +232,10 @@ jobs:
     - name: Create and Test Package
       run: |
         sanitize=$([[ "${{ inputs.tooling }}" == "Sanitize" ]] && echo "True" || echo "False")
+        pre=$([[ "${{ inputs.build-type }}" != "Debug" ]] && echo "-o sisl:prerelease=${{ inputs.prerelease }}" || echo "")
         conan create \
-            -o sisl:prerelease=${{ inputs.prerelease }} \
+            ${pre} \
             -o sisl:malloc_impl=${{ inputs.malloc-impl }} \
-            -o sisl:testing=False \
             -o iomgr:testing=off \
             -o homestore:testing=off \
             -o nuraft_mesg:testing=False \
@@ -248,10 +248,10 @@ jobs:
 
     - name: Code Coverage Run
       run: |
+        pre=$([[ "${{ inputs.build-type }}" != "Debug" ]] && echo "-o sisl:prerelease=${{ inputs.prerelease }}" || echo "")
         conan install \
-            -o sisl:prerelease=${{ inputs.prerelease }} \
+            ${pre} \
             -o sisl:malloc_impl=${{ inputs.malloc-impl }} \
-            -o sisl:testing=False \
             -o iomgr:testing=off \
             -o homestore:testing=off \
             -o nuraft_mesg:testing=False \
