--- a/.github/workflows/build_dependencies.yml
+++ b/.github/workflows/build_dependencies.yml
@@ -171,8 +171,9 @@ jobs:
 
     - name: Build Cache
       run: |
+        pre=$([[ "${{ inputs.build-type }}" != "Debug" ]] && echo "-o sisl:prerelease=${{ inputs.prerelease }}" || echo "")
         conan install \
-            -o sisl:prerelease=${{ inputs.prerelease }} \
+            ${pre} \
             -o sisl:malloc_impl=${{ inputs.malloc-impl }} \
             -o iomgr:testing=off \
             -o homestore:testing=off \
