remove homestore dep on memory test

--- a/src/lib/memory_backend/CMakeLists.txt
+++ b/src/lib/memory_backend/CMakeLists.txt
@@ -20,6 +20,7 @@ target_sources(memory_test PRIVATE
 target_link_libraries(memory_test
     homeobject_memory
     ${COMMON_TEST_DEPS}
+    -rdynamic
 )
 add_test(NAME MemoryTestCPU COMMAND memory_test -csv error --executor cpu --num_iters 20000)
 add_test(NAME MemoryTestIO COMMAND memory_test -csv error --executor io --num_iters 20000)
