--- a/.github/workflows/build_dependencies.yml
+++ b/.github/workflows/build_dependencies.yml
@@ -173,11 +173,11 @@ jobs:
       run: |
         pre=$([[ "${{ inputs.build-type }}" != "Debug" ]] && echo "-o sisl:prerelease=${{ inputs.prerelease }}" || echo "")
         conan install \
+            -c tools.build:skip_test=True \
             ${pre} \
             -o sisl:malloc_impl=${{ inputs.malloc-impl }} \
             -o iomgr:testing=off \
             -o homestore:testing=off \
-            -o nuraft_mesg:testing=False \
             -o testing=False\
             -s build_type=${{ inputs.build-type }} \
             --build missing \
@@ -238,7 +238,6 @@ jobs:
             -o sisl:malloc_impl=${{ inputs.malloc-impl }} \
             -o iomgr:testing=off \
             -o homestore:testing=off \
-            -o nuraft_mesg:testing=False \
             -o homeobject:sanitize=${sanitize} \
             -o homeobject:testing=True \
             -s build_type=${{ inputs.build-type }} \
@@ -254,7 +253,6 @@ jobs:
             -o sisl:malloc_impl=${{ inputs.malloc-impl }} \
             -o iomgr:testing=off \
             -o homestore:testing=off \
-            -o nuraft_mesg:testing=False \
             -o coverage=True \
             -o testing=True \
             -s build_type=${{ inputs.build-type }} \
