flatbuffer for baseline resync (#170)
* flatbuffer for baseline resync

--- a/src/lib/homestore_backend/CMakeLists.txt
+++ b/src/lib/homestore_backend/CMakeLists.txt
@@ -40,6 +40,8 @@ settings_gen_cpp(
     ${CMAKE_CURRENT_BINARY_DIR}/generated/
     "${PROJECT_NAME}_homestore"
     hs_backend_config.fbs
+    resync_pg_shard.fbs
+    resync_blob_data.fbs
   )
 
 add_subdirectory(tests)
