--- a/src/lib/homestore_backend/CMakeLists.txt
+++ b/src/lib/homestore_backend/CMakeLists.txt
@@ -41,7 +41,8 @@ settings_gen_cpp(
     ${CMAKE_CURRENT_BINARY_DIR}/generated/
     "${PROJECT_NAME}_homestore"
     hs_backend_config.fbs
-    resync_pg_shard.fbs
+    resync_pg_data.fbs
+    resync_shard_data.fbs
     resync_blob_data.fbs
   )
 
