Add framework for snapshot resync
- pg_blob_iterator is the snapshot resync context for leader(read path)
- SnapshotReceiveHandler is a newly added structure as the snapshot context for follower(write path)
- Comment previous implementation codes

--- a/src/lib/homestore_backend/CMakeLists.txt
+++ b/src/lib/homestore_backend/CMakeLists.txt
@@ -44,6 +44,7 @@ settings_gen_cpp(
     resync_pg_data.fbs
     resync_shard_data.fbs
     resync_blob_data.fbs
+    resync_payload.fbs
   )
 
 add_subdirectory(tests)
