Baseline resync msg protocol and data structure (#221)
* Add snapshot related msg protocol / struct and framework for snapshot resync

- pg_blob_iterator is the snapshot resync context for leader(read path)
- SnapshotReceiveHandler is a newly added structure as the snapshot context for follower(write path)
- Comment previous implementation codes

--- a/src/lib/homestore_backend/CMakeLists.txt
+++ b/src/lib/homestore_backend/CMakeLists.txt
@@ -41,8 +41,10 @@ settings_gen_cpp(
     ${CMAKE_CURRENT_BINARY_DIR}/generated/
     "${PROJECT_NAME}_homestore"
     hs_backend_config.fbs
-    resync_pg_shard.fbs
+    resync_pg_data.fbs
+    resync_shard_data.fbs
     resync_blob_data.fbs
+    resync_payload.fbs
   )
 
 add_subdirectory(tests)
