--- a/.github/workflows/version_change_check.yml
+++ b/.github/workflows/version_change_check.yml
@@ -3,6 +3,8 @@ name: Check Version Update
 on:
   pull_request:
     types: [opened, edited, synchronize]
+    branches:
+      - main
 
 jobs:
   check-file:
