--- a/src/lib/homestore_backend/tests/CMakeLists.txt
+++ b/src/lib/homestore_backend/tests/CMakeLists.txt
@@ -17,7 +17,16 @@ target_link_libraries(homestore_tests
             ${COMMON_TEST_DEPS}
         )
 
+
+add_library(homestore_tests_dynamic OBJECT)
+target_sources(homestore_tests_dynamic PRIVATE test_homestore_backend_dynamic.cpp)
+target_link_libraries(homestore_tests_dynamic
+            homeobject_homestore
+            ${COMMON_TEST_DEPS}
+        )
+
 add_executable (test_heap_chunk_selector)
 target_sources(test_heap_chunk_selector PRIVATE test_heap_chunk_selector.cpp ../heap_chunk_selector.cpp)
 target_link_libraries(test_heap_chunk_selector homestore::homestore ${COMMON_TEST_DEPS})
 add_test(NAME HeapChunkSelectorTest COMMAND test_heap_chunk_selector)
+
