Split snp_rcvr_info_sb into 2 superblocks
Add a separate superblk for shard list to avoid writing a (potentially)
very large data every time updating shard cursor.

--- a/src/lib/homestore_backend/CMakeLists.txt
+++ b/src/lib/homestore_backend/CMakeLists.txt
@@ -77,4 +77,5 @@ add_test(NAME HomestoreTestDynamic
 add_test(NAME HomestoreTestDynamicWithResync
         COMMAND homestore_test_dynamic -csv error --executor immediate --config_path ./
         --override_config homestore_config.consensus.snapshot_freq_distance:13
-        --override_config homestore_config.consensus.num_reserved_log_items=13)
+        --override_config homestore_config.consensus.num_reserved_log_items=13
+        --override_config homestore_config.consensus.snapshot_sync_ctx_timeout_ms=5000)
